# WFM-IEX-

./: .gitignore  README.md
wfm-iex/: README.md  index.html  package-lock.json  package.json  vite.config.js
wfm-iex/src/: App.jsx  main.jsx  store.jsx  styles.css
wfm-iex/src/components/: AISummary.jsx  Chart.jsx  DateRange.jsx  KPICard.jsx  Sidebar.jsx  TopBar.jsx
wfm-iex/src/data/: history.js  seed.js
wfm-iex/src/lib/: dates.js  erlang.js  forecast.js  granularity.js  insights.js  planning.js  schedule.js
wfm-iex/src/pages/: Adherence.jsx  Dashboard.jsx  Forecast.jsx  Intraday.jsx  Reports.jsx  Schedules.jsx  Staffing.jsx
wfm-platform/: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
wfm-platform/.github/workflows/: ci.yml
wfm-platform/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
wfm-platform/backend/alembic/: env.py
wfm-platform/backend/app/: __init__.py  main.py
wfm-platform/backend/app/api/: deps.py  router.py
wfm-platform/backend/app/api/v1/: health.py
wfm-platform/backend/app/core/: config.py  exceptions.py  logging.py
wfm-platform/backend/app/db/: base.py  mixins.py  session.py
wfm-platform/backend/app/modules/: README.md
wfm-platform/backend/app/schemas/: common.py
wfm-platform/backend/app/worker/: celery_app.py
wfm-platform/backend/tests/: conftest.py  test_health.py
wfm-platform/frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
wfm-platform/frontend/src/: App.tsx  (+3 more)
(+58 files in other folders)
