[project]
name = "flowforce-wfm-backend"
version = "0.1.0"
description = "FlowForce WFM — FastAPI modular monolith"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",       # JWT (Module 2)
  "passlib[argon2]>=1.7",                 # password hashing (Module 2)
  "redis>=5.0",
  "celery>=5.4",
  "structlog>=24.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "aiosqlite>=0.20",                      # in-memory DB for tests
]
ml = [
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "prophet>=1.1",
  "xgboost>=2.1",
  "lightgbm>=4.4",
  "pandas>=2.2",
  "numpy>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
